@@ -2,6 +2,7 @@ Revision history for Data::Text
 
 0.16
 	Handle the latest version of Params::Get
+	Added clear()
 
 0.15	Thu Apr 10 07:41:32 EDT 2025
 	Use Test::DescribeMe
